# Ticket-Sale

./: .cspell.json  .gitignore  .gitlab-ci.yml  .project-words.txt  Cargo.toml  README.md  build.gradle  concurrent-ticket-sale.code-workspace  justfile  project.toml  rustfmt.toml  settings.gradle
crates/ticket-sale-core/: Cargo.toml
crates/ticket-sale-core/src/: lib.rs  request.rs
crates/ticket-sale-rocket/: Cargo.toml
crates/ticket-sale-rocket/src/: balancer.rs  constants.rs  coordinator.rs  database.rs  estimator.rs  lib.rs  server.rs
crates/ticket-sale-server/: Cargo.toml
crates/ticket-sale-server/src/: http.rs  main.rs  slug.rs
crates/ticket-sale-tests/: Cargo.toml
crates/ticket-sale-tests/src/: lib.rs  project_settings.rs
crates/ticket-sale-tests/src/api/: jni.rs  mock.rs  mod.rs
crates/ticket-sale-tests/tests/: example.rs  morescale.rs  random_buying_and_scaling_small.rs  resize.rs  scale_server_response.rs  scaletest.rs  sell_all_tickets.rs  test_can_not_buy_wrong_ticket.rs  test_timeout_while_terminating.rs  test_timeout_while_terminating_no_request.rs
crates/ticket-sale-tests/tests/util/: mod.rs
src/main/java/com/pseuco/cp24/: Cli.java  Config.java  ExchangeHandler.java  package-info.java
src/main/java/com/pseuco/cp24/request/: CustomerId.java  HttpRequest.java  MockRequest.java  Request.java  RequestHandler.java  ServerId.java  package-info.java
src/main/java/com/pseuco/cp24/rocket/: Balancer.java  Command.java  Coordinator.java  Database.java  Estimator.java  Mailbox.java  Rocket.java  Server.java  Ticket.java  package-info.java
(+6 files in other folders)
